--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div>
     <div id="banner">
         <div><h3>Banner</h3></div>
-        <a href=".">card</a>
+        <a href="">card</a>
     </div>
 
 
